--- a/cliente/src/components/Card/lol.module.css
+++ b/cliente/src/components/Card/lol.module.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Creepster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 
 
 .contenedor{
@@ -22,7 +23,7 @@
 
 .titulo_2{
     position: absolute;
-    top:250px;
+    top:220px;
     left: 0;
     right: 0;
     margin: auto;
@@ -35,6 +36,7 @@
 
 .titulo{
     font-size: 22px;
+    margin-top: -20px;
     font-family: 'Press Start 2P', cursive;
     text-transform: uppercase;
     color: #cc1dbdcb;
@@ -51,7 +53,7 @@
 
 .id{
     position: absolute;
-    top: 140px;
+    top: 90px;
     left: 0;right: 0;
     margin: auto;
     font: bold 50px/1 arial;
@@ -96,7 +98,7 @@
     transition: all 0.5s ease;
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.5);
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .back Link{
@@ -144,43 +146,42 @@
 }
 
 .boton_fav{
-    position: absolute;
-    font-size: 20px;
+    position:relative;
+    top: 8px;
+    margin-right: -200px;
     background-color: transparent;
-    text-decoration: none;
-    transform: rotateY(-180deg);
-    backface-visibility: hidden;
-    border: none;
-    right: 5px;
-    top:2px;
-    transition: all 300ms ease;
-}
-
-.boton_eliminar{
-    position: absolute;
-    background-color: transparent;
-    font-family: 'Creepster', cursive;
-    text-decoration: none;
-    font-size: 28px;
     transform: rotateY(-180deg);
     backface-visibility: hidden;
     border: none;
     color: white;
+}
+.boton_fav img{
+    width: 25px;
+}
+
+
+.boton_eliminar{
+    position:absolute;
     left: 5px;
-    transition: all 300ms ease;
+    top: 6px;
+    background-color: transparent;
+    transform: rotateY(-180deg);
+    backface-visibility: hidden;
+    border: none;
+    color: white;
+
 
 }
+.boton_eliminar img{width: 25px;
+    transition: all 0.5s ease;}
 
 .salto{
     padding: 8px;
 }
 
 
-.boton_fav:hover{
-    font-size: 22px;
-}
-
-.boton_eliminar:hover{
-    font-size: 29px;
+.boton_eliminar img:hover{
+    width: 26px;
+    
 }
 
